# juno-alpha-proxy-contract

./: .gitmodules  Cargo.toml  README.md
.github/: main-backup.yml  test.yml
.github/workflows/: juno-mainnet.yml  juno-testnet.yml  main.yml
artifacts/: checksums.txt  checksums_intermediate.txt  obi_proxy_contract.wasm
examples/: schema.rs
schema/: can_spend_response.json  execute_msg.json  hot_wallets_response.json  instantiate_msg.json  query_msg.json  signers_response.json  update_delay_response.json
scripts/: common.sh  current_contract.sh  deploy_proxy.sh  deploy_proxy_local.sh  expect_wrapper.sh  import_key.sh  import_keys.sh  install_cosmwasm.sh  install_juno.sh  test_contract.sh
src/: authorizations.rs  constants.rs  constants_tests.rs  contract.rs  contract_tests.rs  defaults.rs  error.rs  helpers.rs  hot_wallet.rs  hot_wallet_tests.rs  integration_tests.rs  lib.rs  msg.rs  pair_contract.rs  pair_contract_defaults.rs  permissioned_address.rs  signers.rs  simulation.rs  sourced_coin.rs  sources.rs  state.rs  state_tests.rs  submsgs.rs  tests_authorizations.rs  tests_common.rs  tests_constants.rs  tests_contract.rs  tests_helpers.rs  tests_hot_wallet.rs  tests_pair_contract.rs  tests_permissioned_address.rs  tests_signers.rs  tests_state.rs
ts/: ObiProxy.client.ts  ObiProxy.types.ts  bundle.ts
