[package]
name = "obi-proxy-contract"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>","Peter Keay <pete@obi.money>"]
edition = "2018"
description = "cw1 proxy contract with single admin and multiple spend limit wallets"
license = "Apache-2.0"
repository = "https://github.com/obi-wallet/proxy_contract"
homepage = "https://obi.money"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cw-utils = { version = "0.13.4" }
cw1 = { version = "0.13.4" }
cw2 = { version = "0.13.4" }
cw20 = { version = "0.13.4" }
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = { version = "0.13.4" }
chrono = { path = "./packages/chrono" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = { version = "0.13.4" }
derivative = "2"
