[package]
name = "obi-proxy-contract"
version = "0.6.2"
authors = ["Peter Keay <pete@obi.money>","Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "cw1 proxy contract with single admin and multiple spend limit wallets. Fee lend and repay patent pending."
license = "AGPL-3.0"
repository = "https://github.com/obi-wallet/proxy_contract"
homepage = "https://obi.money"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cw-utils = { version = "0.13.4" }
cw1 = { version = "0.13.4" }
cw2 = { version = "0.13.4" }
cw20 = { version = "0.13.4" }
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = { version = "0.13.4" }
chrono = { path = "./packages/chrono" }
serde-json-wasm = "0.4.1"
serde-json-value-wasm = { path = "./packages/serde-json-value-wasm" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
semver = "1"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = { version = "0.13.4" }
derivative = "2"
